--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,6 +11,7 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.title == "Apps" %} active{% endif %}" href="{{ "/apps" }}">Apps</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -31,6 +32,6 @@
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p class="copyright">&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
