--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -259,8 +259,14 @@ tbody tr:nth-child(odd) th {
  */
 
 .lead {
-  font-size: 1.25rem;
-  font-weight: 300;
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+
+.copyright {
+  font-size: 0.7rem;
+  font-weight: 100;
 }
 
 
@@ -286,7 +292,7 @@ tbody tr:nth-child(odd) th {
  */
 
 .container {
-  max-width: 38rem;
+  max-width: 42rem;
   padding-left:  1rem;
   padding-right: 1rem;
   margin-left:  auto;
