--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include sidebar.html %}
+    {% include nav.html %}
 
-    <div class="content container">
-      {{ content }}
-    </div>
+    {{ content }}
 
-  </body>
+    {% include footer.html %}
+
+    {% include ga.html %}
+
+</body>
+
 </html>
