--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,23 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
-                {% for page in site.pages %}{% if page.title %}
-				{% if page.url != '/404.html' %}
+
+      {% comment %}
+        The code below dynamically generates a sidebar nav of pages with
+        `layout: page` in the front-matter. See readme for usage.
+      {% endcomment %}
+	  
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
                 <li>
-                    <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                    <a href="{{node.url}}">{{ node.title }}</a>
                 </li>
-				{% endif %}
-                {% endif %}{% endfor %}
+
+          {% if node.layout == "page" %}
+          {% endif %}
+        {% endif %}
+      {% endfor %}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
