--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,14 @@
 
 <body>
 
-    {% include nav.html %}
+	{% include nav.html %}
 
-    {{ content }}
-
-    {% include footer.html %}
-
-    {% include ga.html %}
-
+	<div>
+		{{ content }}
+	</div>
+	
+	
+	{% include footer.html %}
 </body>
 
 </html>
