--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -232,6 +232,7 @@ hr.small {
   margin: 0;
   font-weight: 300;
   margin-bottom: 10px;
+  line-height: 1.3;
 }
 .post-preview > .post-meta {
   color: #777777;
