--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,19 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	
+	
+    <script src="{{site.baseurl}}vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{{site.baseurl}}vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="{{site.baseurl}}js/jqBootstrapValidation.js"></script>
+    <script src="{{site.baseurl}}js/contact_me.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="{{site.baseurl}}js/clean-blog.min.js"></script>
 
     {% feed_meta %}
 
