update dependencies and maybe fix nav

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,10 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{site.baseurl}}vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{site.baseurl}}css/clean-blog.css">
+    <link rel="stylesheet" href="/css/clean-blog.css">
 
     <!-- Pygments Github CSS -->
     <!-- <link rel="stylesheet" href="{{site.baseurl}}css/syntax.css"> -->
@@ -31,13 +31,13 @@
     <![endif]-->
 	
 	
-    <script src="{{site.baseurl}}vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{site.baseurl}}vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="{{site.baseurl}}js/clean-blog.min.js"></script>
+    <script src="/js/clean-blog.min.js"></script>
 
     {% feed_meta %}
 
