--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
       <li class="header-item-title header-toggle "><a href="#menu"><h2><i class="fa fa-bars"></i></h2></a></li>
       <li class="header-item-title">
         <a href="{{site.url}}/">
-          {% if site.logo %}
+          <!-- {% if site.logo %}
             <img class="logo" src="{{site.url}}/{{ site.logo }}" alt="{{ site.title }}">
-          {% endif %}
+          {% endif %} -->
           <a href="{{site.url}}/" class="title"> {{ site.title }}</a>
         </a>
       </li>
