--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -472,7 +472,7 @@ ul.social-buttons li a:active {
 	height: 50px;
 	@media #{$medium} {
 		background-color: $header-color;
-		min-height: 300px;
+		min-height: 50;
 	}
 }
 .header-toggle{
@@ -543,8 +543,11 @@ ul.social-buttons li a:active {
 	}
 }
 .header-menu-top{
-	background-color: $menu-top;
+	background-color: $menu-overflow;
 	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.4);
+}
+.header-menu-top ul li a{
+	color: $white;
 }
 
 .header-menu-overflow{
@@ -557,7 +560,7 @@ ul.social-buttons li a:active {
 }
 
 .header-menu-top .sub-item{
-	background-color: $menu-top;
+	background-color: $menu-overflow;
 }
 
 .header-menu-overflow .sub-item{
@@ -569,6 +572,7 @@ ul.social-buttons li a:active {
 	float: right;
 	padding-left: 20px;
 	padding-right: 20px;
+	text-transform: uppercase;
 	border-top-color: transparent;
 	border-top-style: solid;
 	border-top-width: 5px;
@@ -596,13 +600,16 @@ ul.social-buttons li a:active {
 	@media #{$large} {
 		display: block;
 	}
+	a.title {
+		font-size: 1.0rem;
+	}
 }
 .header-item-title{
 	float: left;
 	border-top-width: 0px;
 	height: 100%;
 	a.title {
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 	    padding-left: 5px;
 		display: none;
 		vertical-align: middle;
