--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,6 +46,7 @@
       <li class="header-item"><a href="{{site.url}}/search"><h3><i class="fa fa-search"></i></h3></a></li>
     </ul>
   </div>
+{% if page.layout == 'home' %}
 <div class="entry-header">
   <div class="header-title">
     <div class="header-title-wrap">
@@ -70,6 +71,9 @@
     </div><!-- /.header-title-wrap -->
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
+{% else %}
+<div class="entry-blank-space"></div>
+{% endif %}
 
 
 <nav id="menu" style="display: none">
