header image and blog section

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -475,6 +475,9 @@ ul.social-buttons li a:active {
 		min-height: 300px;
 	}
 }
+.header-image{
+	width: 100%;
+}
 .entry-blank-space {
 	width: 100%;
 	overflow: hidden;
