--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,6 +48,7 @@
   </div>
 {% if page.layout == 'home' %}
 <div class="entry-header">
+  <img class="header-image" src="/images/abstract-2.jpg"/>
   <div class="header-title">
     <div class="header-title-wrap">
       <h1>{{ page.title }}</h1>
