tweaking header and homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@
   {% include header.html %}
 
   <div id="main" role="main">
+    <h1 class="entry-title"><a href="/blog">Latest Posts</a></h1>
     <article class="hentry">
       <div class="entry-content">
         {{ content }}
