--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,10 @@
   <div class="header-title">
     <div class="header-title-wrap">
       <h1>{{ page.title }}</h1>
+      <hr class="small">
+      <h3 class="header-description">
+        I’m a software engineer. I’m Portuguese, currently living in London, and working for <a href="http://www.paddle.com/">Paddle</a>.
+      </h3>
       {% if page.date %}
         <h2><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h2>
       {% else %}
