--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,8 @@
+<div class="social-links">
+    <ul class="list-inline social-buttons">
+      {% for network in site.social %}
+        <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
+      {% endfor %}
+    </ul>
+</div>
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="http://github.com/aron-bordin/neo-hpstr-jekyll-theme" rel="nofollow">Neo-HPSTR Theme</a>.</span>
