--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -219,6 +219,12 @@ header .entry-meta {
 }
 
 // Read More Module
+.social-links {
+	position: relative;
+	
+	text-align: center;
+	@include clearfix;
+}
 .read-more {
 	position: relative;
 	margin: 40px 2px 20px 2px;
