--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -176,10 +176,6 @@ header .entry-meta {
 		margin: 50px 30px 30px;
 		text-align: center;
 	}
-	.entry-small-title {
-		font-size: 1.17rem;
-		margin-top: 0px;
-	}
 }
 .entry-tags {
 	display: block;
@@ -219,12 +215,6 @@ header .entry-meta {
 }
 
 // Read More Module
-.social-links {
-	position: relative;
-	
-	text-align: center;
-	@include clearfix;
-}
 .read-more {
 	position: relative;
 	margin: 40px 2px 20px 2px;
@@ -482,31 +472,7 @@ ul.social-buttons li a:active {
 	height: 50px;
 	@media #{$medium} {
 		background-color: $header-color;
-		min-height: 370px;
-	}
-}
-.header-description {
-	color: $white;
-	text-shadow: 1px 1px 4px rgba($base-color, 0.6);
-	a {
-		color: $white;
-		text-shadow: 1px 1px 4px rgba($base-color, 0.6);	
-	}
-}
-.header-image{
-	width: 100%;
-}
-.entry-blank-space {
-	width: 100%;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	height: 50px;
-	@media #{$medium} {
-		background-color: $header-color;
-		min-height: 50px;
+		min-height: 50;
 	}
 }
 .header-toggle{
@@ -518,7 +484,7 @@ ul.social-buttons li a:active {
 .header-title {
 	text-align: center;
 	position: absolute;
-	top: 150px;
+	bottom: 0;
 	display: table;
 	margin-top: 0;
 	width: 100%;
@@ -580,7 +546,6 @@ ul.social-buttons li a:active {
 	background-color: $menu-overflow;
 	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.4);
 }
-
 .header-menu-top ul li a{
 	color: $white;
 }
@@ -607,7 +572,7 @@ ul.social-buttons li a:active {
 	float: right;
 	padding-left: 20px;
 	padding-right: 20px;
-	font-variant: small-caps;
+	text-transform: uppercase;
 	border-top-color: transparent;
 	border-top-style: solid;
 	border-top-width: 5px;
@@ -635,13 +600,16 @@ ul.social-buttons li a:active {
 	@media #{$large} {
 		display: block;
 	}
+	a.title {
+		font-size: 1.0rem;
+	}
 }
 .header-item-title{
 	float: left;
 	border-top-width: 0px;
 	height: 100%;
 	a.title {
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 	    padding-left: 5px;
 		display: none;
 		vertical-align: middle;
