--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -485,6 +485,19 @@ ul.social-buttons li a:active {
 		min-height: 50;
 	}
 }
+.entry-blank-space {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	height: 50px;
+	@media #{$medium} {
+		background-color: $header-color;
+		min-height: 50px;
+	}
+}
 .header-toggle{
 	display: block;
 	@media #{$large} {
