--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -326,7 +326,7 @@ ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
     color: #222;
-    background-color: #fec503;
+    background-color: #f45145;
 }
 .read-more-list {
 	border-top: solid 2px lighten($base-color,80);
