--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,7 +26,8 @@ $header-margin			 : #F45145;
 $menu-top				 : white;
 $menu-height			 : 70px;
 $menu-overflow			 : #2E2E2E;
-$body-color      		 : #e8e8e8;
+$body-color      		 : #ffffff;
+// $body-color      		 : #e8e8e8;
 $text-color      		 : rgba(#222,0.8);
 $comp-color 	 		 : complement(#222);
 $border-color    		 : lighten(#222,60);
