--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,14 +1,14 @@
 // Typography
 // --------------------------------------------------
 
-$base-font: 'Lato', Calibri, Arial, sans-serif;
+$base-font: 'Poppins', Calibri, Arial, sans-serif;
 $heading-font: $base-font;
 $caption-font: $base-font;
 $code-font: monospace;
 $alt-font: serif;
 
 $doc-font-size: 16;
-$doc-line-height: 26;
+$doc-line-height: 32;
 
 
 // set-up the body font-size / line-height
